--- a/index.html
+++ b/index.html
@@ -421,6 +421,33 @@
 				</div>
 			</section>
 
+			<div class="page__benefits benefits">
+				<div class="benefits__container _container">
+					<div class="benefits__body">
+						<div class="benefits__item">
+							<div class="benefits__text">
+								Уникальное разнообразие
+							</div>
+						</div>
+						<div class="benefits__item">
+							<div class="benefits__text">
+								Экологическое потребление
+							</div>
+						</div>
+						<div class="benefits__item">
+							<div class="benefits__text">
+								Лучшее качество
+							</div>
+						</div>
+						<div class="benefits__item">
+							<div class="benefits__text">
+								Идеальные условия для выращивания
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</main>
 		<footer class="footer">
 	<div class="footer__container _container">
