--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="header__body">
 				<div class="header__logo">
 					<a href="#">
-						<img src="img/header/logo.png" alt="logo">
+						<img src="img/header/logo.svg" alt="logo">
 					</a>
 				</div>
 				<div class="header__menu">
@@ -55,7 +55,11 @@
 				</button>
 			</div>
 		</div>
-		<div class="header__menu-mob"></div>
+		<div class="header__menu-mob">
+			<div class="header__menu-mob_image">
+				<img src="img/header/logo.svg" alt="logo">
+			</div>
+		</div>
 	</div>
 </header>
 		<main class="page">
@@ -448,10 +452,114 @@
 				</div>
 			</div>
 
+			<section class="page__seafood seafood">
+				<div class="seafood__container _container">
+					<div class="seafood__items">
+						<div class="seafood__item">
+							<div class="seafood__content">
+								<h3 class="seafood__title">Экстремальные условия для человека. Идеальные условия для рыб.</h3>
+								<p class="seafood__text">
+									Гольфстрим, несущий теплую воду из Мексиканского залива через Атлантический океан, течет на север
+									вдоль норвежского побережья в прозрачную, чистую ледяную воду Арктики. Это создает идеальные условия
+									для невероятно богатой морской экосистемы.
+								</p>
+								<p class="seafood__text">
+									Мелкая рыба, большая рыба, моллюски и другие формы жизни. Некоторые из них - местное население, другие
+									- мигрируют или проеплывают через земной шар. Некоторые предпочитают холодное открытое море, другие
+									живут в тихих глубоких фьордах, защищенных стеной островов и шхер. Каждый из них играет свою роль в
+									сложном и увлекательном морском жизненном цикле.
+								</p>
+								<p class="seafood__text">
+									Разнообразие морепродуктов из этой среды уникально. Это одна из основных причин, почему Норвегия
+									является вторым по величине экспортером морепродуктов в мире. И есть также причина, по которой повара
+									и знатоки всего мира выбирают морепродукты из Норвегии: вам будет сложно найти такой же выбор и
+									качество где-либо еще.
+								</p>
+							</div>
+							<div class="seafood__image">
+								<img src="img/01.jpg" alt="seafood image">
+							</div>
+						</div>
+						<div class="seafood__item">
+							<div class="seafood__image">
+								<img src="img/02.jpg" alt="seafood image">
+							</div>
+							<div class="seafood__content">
+								<h3 class="seafood__title">Лучшее качество морепродуктов</h3>
+								<p class="seafood__text">
+									Норвежские морепродукты - это качественные морепродукты, и мы рады ими поделиться.
+									Вот почему нашими морепродуктами наслаждаются во всем мире. Международное значение этой отрасли
+									наглядно демонстрирует тот факт, что норвежские морепродукты путешествуют примерно в 150 стран. Мы
+									второй по величине экспортер морепродуктов в мире.
+								</p>
+							</div>
+						</div>
+						<div class="seafood__item">
+							<div class="seafood__content">
+								<h3 class="seafood__title">Экологическое потребление</h3>
+								<p class="seafood__text seafood__text-mb">
+									Великолепная прибрежная природа Норвегии и разнообразие жизни, которое она поддерживает, - это основа
+									нашего существования с каменного века. Мы знаем, что обязаны передать это будущим поколениям. Море -
+									это дар, который продолжает дарить, но только до тех пор, пока мы продолжаем уважать его и бережно
+									относимся к тому, что нам было дано.
+								</p>
+								<h3 class="seafood__title">Идеальные условия выращивания</h3>
+								<p class="seafood__text">
+									Норвегия имеет одну из самых передовых и хорошо зарекомендовавших себя систем устойчивого развития и
+									управления как в рыболовстве, так и в аквакультуре. Это не случайность, а систематическая работа на
+									всех уровнях, обеспечивающая безопасность потребителей и благополучие рыб.
+								</p>
+								<p class="seafood__text">
+									Большой упор на благополучие животных и строгие правила означают, что наши морепродукты неизменно
+									высокого качества и безопасны для употребления. Производство является экологически безопасным и
+									ответственным, оставляя минимальный след на окружающую среду.
+								</p>
+							</div>
+							<div class="seafood__image">
+								<img src="img/03.jpg" alt="seafood image">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<blockquote class="blockquote">
+				<div class="blockquote__container _container">
+					<div class="blockquote__image _ibg">
+						<img src="img/blockquote.svg" alt="blockquote image">
+					</div>
+					<p class="blockquote__text">Вы получаете самые лучшие морепродукты.</p>
+					<p class="blockquote__text">Неважно, что это за морепродукты, потому что они норвежские, а значит - самого лучшего качества. </p>
+				</div>
+			</blockquote>
+
 		</main>
 		<footer class="footer">
-	<div class="footer__container _container">
-
+	<div class="footer__container">
+		<div class="footer__inner">
+			<div class="footer__image _ibg">
+				<img src="img/footer-bg.jpg" alt="footer image">
+			</div>
+			<div class="footer__contacts">
+				<div class="footer__text">В Норвегии холодно.
+					<span>Очень холодно.</span>
+				</div>
+				<div class="footer__mail">
+					Связаться с нами
+					<a href="mailto:mail@seafood.com">mail@seafood.com</a>
+				</div>
+				<div class="footer__phone">
+					Телефон:
+					<a href="tel:4777603333"> +47 77 60 33 33</a>
+				</div>
+				<div class="footer__adress">
+					Норвежский совет по морепродуктам
+					<span>Stortorget 1</span>
+					<span>PO Box 6176</span>
+					<span>N-9291 Tromsø</span>
+				</div>
+			</div>
+		</div>
 	</div>
 </footer>
 	</div>
